@@ -95,7 +95,7 @@ IDI_EXPLORER            ICON    DISCARDABLE     "res/explorer.ico"
 IDI_STARTMENU           ICON    DISCARDABLE     "res/startmenu.ico"
 IDI_LOGOFF              ICON    DISCARDABLE     "res/logoff.ico"
 IDI_ARROW               ICON    DISCARDABLE     "res/arrow.ico"
-IDI_ARROW_SELECTED      ICON    DISCARDABLE     "res\\arrowsel.ico"
+IDI_ARROW_SELECTED      ICON    DISCARDABLE     "res/arrowsel.ico"
 
 /////////////////////////////////////////////////////////////////////////////
 //
